# psio-assist

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  covers.db  muli-disc.txt  psio-assist.pro  requirements.txt  resources.qrc  setup.py
.github/workflows/: build-windows.yml
src/: binfile.cpp  binfile.h  binmerge.py  config  config.cpp  config.h  cu2generator.h  cue2cu2.py  cuesheet.cpp  cuesheet.h  database.cpp  database.h  db.py  game.cpp  game.h  game_data  game_files.py  main.cpp  mainwindow.cpp  mainwindow.h  ppf_patcher.py  preferencesdialog.cpp  preferencesdialog.h  psio_assist.py  uiconfig.h  utils.h
src/data/: fs_manifest.csv  manifest
